--- a/exo1/app/index.html
+++ b/exo1/app/index.html
@@ -55,6 +55,7 @@
 		<script src="bower_components/es5-shim/es5-shim.min.js"></script>
 		<script src="bower_components/angular/angular.min.js"></script>
 		<script src="bower_components/angular-route/angular-route.min.js"></script>
+		<script src="bower_components/angular-resource/angular-resource.min.js"></script>
 		<script src="bower_components/angucomplete-alt/angucomplete-alt.js"></script>
 		<script src="app.js"></script>
 	</body>
